--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <li><i class="ri-check-double-line"></i>Dürüst</li>
               <li><i class="ri-check-double-line"></i>Hızlı</li>
               <li><i class="ri-check-double-line"></i>Çözüm odaklı</li>
-              <li><i class="ri-check-double-line"></i>Uygun fiyatlı</li>
+              <li><i class="ri-check-double-line"></i>Uygun fiyatlıyız</li>
             </ul>
 
           </div>
@@ -172,7 +172,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-school"></i></div>
-              <h4 class="title"><a href="#">Apartman ve Site Yönetimi</a></h4>
+              <h4 class="title"><a href="#">Profesyonel Apartman Yönetimi</a></h4>
               <h2 class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</h2>
             </div>
           </div>
@@ -180,8 +180,9 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-money-withdraw"></i></div>
-              <h4 class="title"><a href="#">Muhasebe</a></h4>
-              <p class="description">Mali işlerinizi bizler yürütüyoruz ve güveniniz için minnettarız.</p>
+              <h4 class="title"><a href="#">Profesyonel Site Yönetimi</a></h4>
+              <p class="description">Toplu yaşam alanınızdaki işlerinizi bizler yürütüyoruz ve güveniniz için
+                minnettarız.</p>
             </div>
           </div>
 
@@ -190,7 +191,8 @@
               <div class="icon"><i class="bx bx-library"></i></div>
               <h4 class="title"><a href="#">Hukuk</a></h4>
               <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam
-                alanınızın huzurunu bozmadan yapıyoruz.</p>
+                alanınızın huzurunu bozmadan yapıyoruz. Aidat veya demirbaş ödemelerini yapmayan sakinlerden icra
+                yoluyla bu borçları tahsil ediyoruz.</p>
             </div>
           </div>
 
@@ -727,8 +729,8 @@
         <div class="section-title">
           <h2>Fiyatlandırma</h2>
           <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
-          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan ve bina
-            durumunuzdan tamamen bağımsız!</p>
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan tamamen bağımsız!
+            Apartman ve site yönetiminde ücretlerimiz sabit.</p>
         </div>
 
         <div class="row">
@@ -760,6 +762,9 @@
                 <li>Temizlik</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
+                <li>Peyzaj</li>
+                <li>Güvenlik</li>
+                <li>Ortak alanlar ve sosyal tesislerin düzeni ve işlerliğinin sağlanması</li>
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
@@ -777,6 +782,11 @@
                 <li>Temizlik</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
+                <li>Güvenlik</li>
+                <li>Gerekli rapor ve ruhsatlar</li>
+                <li>Belediye ilişkilerinin yürütülmesi</li>
+                <li>Resmi kurumlardan gerekli evrakların temini</li>
+
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
@@ -861,6 +871,17 @@
                 bir miktara ulaştığı zaman vadeli şekilde veya şirket havuzumuzdan ödemeyi gerçekleştiriyoruz. Acil
                 tamir ve arızalar için ise bütçe toplanmasını beklemiyoruz, kasanızda yeterli para da aramıyoruz. Şirket
                 havuzumuzdan ödemeyi yapıyor ve sorunu çözüyoruz.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Yaşam alanımızı kanunlara uygun
+              yönetiyor musunuz? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
+            </div>
+            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Yaşam alanınızın yönetimini Kat Mülkiyeti Kanunu'ndan aldığımız yetki ile adil ve kanunlara yüzde yüz
+                uygun şekilde yönetiyoruz.
               </p>
             </div>
           </li>
