--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="bina yönetim firması"
-              loading="lazy">
+            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid"
+              alt="küçükçekmece bina yönetimi firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Yaşar Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -454,7 +454,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="kağıthane bina yönetimi firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
               <p></p>
@@ -464,7 +465,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="bina yönetim firması"
+            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="beyoğlu bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Salih Zeki Apartmanı - Beyoğlu</h4>
@@ -475,8 +476,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="bina yönetim firması"
-              loading="lazy">
+            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid"
+              alt="küçükçekmece bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Hilal Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -486,7 +487,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="bina yönetim firması"
+            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="esenyurt bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Kılıçlar Apartmanı - Esenyurt</h4>
@@ -497,7 +498,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="kağıthane bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Ayşe Hanım Apartmanı - Kağıthane</h4>
               <p></p>
@@ -507,7 +509,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="Avcılar bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Özdağ Apartmanı - Avcılar</h4>
               <p></p>
@@ -517,7 +520,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="kağıthane bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
               <p></p>
@@ -527,7 +531,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="küçükçekmece bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Tenten Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -537,7 +542,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="bina yönetim firması"
+            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="esenyurt bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Çakmak Apartmanı - Esenyurt</h4>
@@ -548,7 +553,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="bina yönetim firması"
+            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="küçükçekmece bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Gül Apartmanı - Küçükçekmece</h4>
@@ -559,7 +564,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
+            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="şişli bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Kızılay Apartmanı - Şişli</h4>
               <p></p>
@@ -570,7 +576,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="bina yönetim firması"
+            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="avcılar bina yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Yıldız Apartmanı - Avcılar</h4>
@@ -581,8 +587,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
-              loading="lazy">
+            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid"
+              alt="kağıthane apartman yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Karanfil Apartmanı - Kağıthane</h4>
               <p></p>
@@ -592,8 +598,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
-              loading="lazy">
+            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid"
+              alt="bahçelievler apartman yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Birlik Apartmanı - Bahçelievler</h4>
               <p></p>
@@ -603,7 +609,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
+            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="şişli apartman yönetim firması"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Kerem Apartmanı - Şişli</h4>
@@ -614,18 +620,19 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" loading="lazy"
+            <img src="assets/img/portfolio/ALARAAPARTMANI.png" class="img-fluid" loading="lazy"
               alt="apartman yönetim firması">
             <div class="portfolio-info">
               <h4>Alara Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/Alara APARTMANI.png" data-gallery="portfolioGallery"
+              <a href="assets/img/portfolio/AlaraAPARTMANI.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Alara Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="apartman yönetimi" loading="lazy">
+            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="küçükçekmece apartman yönetimi"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -635,7 +642,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="apartman yönetimi" loading="lazy">
+            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="esenyurt apartman yönetimi"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Güneş Apartmanı - Esenyurt</h4>
               <p></p>
@@ -817,7 +825,8 @@
                 class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Aidatları toplayamıyorsanız, kavgalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
+                Aidatları toplayamıyorsanız, komşularınızla kötü olmak istemiyorsanız, kapı kapı dolaşmak
+                istemiyorsanız, kavgalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
                 kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa devretmelisiniz.
               </p>
             </div>
