--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,7 @@
   <title>Blog - Tempo Bootstrap Template</title>
   <meta name="description"
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
-  <meta name="keywords"
-    content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi">
+  <meta name="keywords" content="apartman yönetimi nasıl yapılır, aidat nasıl toplanır">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
