--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
               <p></p>
-              <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.jpg" data-gallery="portfolioGallery"
+              <a href="is-merkezi/referanslar/Ahmet-Urgancı-Cephe.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Ahmet Urgancı İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -376,7 +376,7 @@
             <div class="portfolio-info">
               <h4>Alper İş Merkezi - Beşiktaş</h4>
               <p></p>
-              <a href="assets/img/portfolio/Alper İş Merkezi.jpg" data-gallery="portfolioGallery"
+              <a href="is-merkezi/referanslar/Alper İş Merkezi.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Alper İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -387,13 +387,13 @@
             <div class="portfolio-info">
               <h4>Savaş İş Merkezi - Bahçelievler</h4>
               <p></p>
-              <a href="assets/img/portfolio/Savaş.jpg" data-gallery="portfolioGallery"
+              <a href="is-merkezi/referanslar/Savaş.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Savaş İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/RAFTOZ ARGUN.jpg" class="img-fluid" alt="site yönetimi" loading="lazy">
+            <img src="site-yonetimi/referanslar/RAFTOZ ARGUN.jpg" class="img-fluid" alt="site yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Raftoz Argun Sitesi - Bahçelievler</h4>
               <p></p>
@@ -408,7 +408,7 @@
             <div class="portfolio-info">
               <h4>Özer Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/ozerapt.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/ozerapt.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -419,7 +419,7 @@
             <div class="portfolio-info">
               <h4>Beyaz Saray Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/BEYAZSARAY.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/BEYAZSARAY.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Beyaz Saray Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -430,7 +430,7 @@
             <div class="portfolio-info">
               <h4>Limanoğlu Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/LİMANOĞLU.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/LİMANOĞLU.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Limanoğlu Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -441,7 +441,7 @@
             <div class="portfolio-info">
               <h4>Yaşar Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/Yaşar Apartmanı.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/Yaşar Apartmanı.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -452,7 +452,7 @@
             <div class="portfolio-info">
               <h4>Bengisu Evleri B Blok - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/bengisuevleri.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/bengisuevleri.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Bengisu Evleri B Blok"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -463,7 +463,7 @@
             <div class="portfolio-info">
               <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/KARACAOĞLU.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/KARACAOĞLU.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Karacaoğlu Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -474,7 +474,7 @@
             <div class="portfolio-info">
               <h4>Salih Zeki Apartmanı - Beyoğlu</h4>
               <p></p>
-              <a href="assets/img/portfolio/Salihzekiapt.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/Salihzekiapt.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Salih Zeki Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -485,7 +485,7 @@
             <div class="portfolio-info">
               <h4>Hilal Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/hilal apartmanı.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/hilal apartmanı.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Hilal Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -496,7 +496,7 @@
             <div class="portfolio-info">
               <h4>Kılıçlar Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/Kılıçlar Apartmanı.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/Kılıçlar Apartmanı.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kılıçlar Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -507,7 +507,7 @@
             <div class="portfolio-info">
               <h4>Ayşe Hanım Apartmanı - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/aysehanım.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/aysehanım.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Özdağ Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -518,7 +518,7 @@
             <div class="portfolio-info">
               <h4>Özdağ Apartmanı - Avcılar</h4>
               <p></p>
-              <a href="assets/img/portfolio/özdağ.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/özdağ.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Özdağ Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -529,7 +529,7 @@
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/İMTAŞ.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/İMTAŞ.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="İmtaş Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -540,7 +540,7 @@
             <div class="portfolio-info">
               <h4>Tenten Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/Tenten.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/Tenten.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Tenten Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -551,7 +551,7 @@
             <div class="portfolio-info">
               <h4>Çakmak Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/ÇAKMAK APARTMANI.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/ÇAKMAK APARTMANI.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Çakmak Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -562,7 +562,7 @@
             <div class="portfolio-info">
               <h4>Gül Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/GÜL APARTMANI.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/GÜL APARTMANI.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Gül Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -573,7 +573,7 @@
             <div class="portfolio-info">
               <h4>Kızılay Apartmanı - Şişli</h4>
               <p></p>
-              <a href="assets/img/portfolio/Kızılay.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/Kızılay.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kızılay Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -585,7 +585,7 @@
             <div class="portfolio-info">
               <h4>Yıldız Apartmanı - Avcılar</h4>
               <p></p>
-              <a href="assets/img/portfolio/yıldızapartmanı.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/yıldızapartmanı.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yıldız Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -596,7 +596,7 @@
             <div class="portfolio-info">
               <h4>Karanfil Apartmanı - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/KARANFİL APARTMANI.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/KARANFİL APARTMANI.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Karanfil Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -607,7 +607,7 @@
             <div class="portfolio-info">
               <h4>Birlik Apartmanı - Bahçelievler</h4>
               <p></p>
-              <a href="assets/img/portfolio/BİRLİK APARTMANI.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/BİRLİK APARTMANI.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Birlik Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -618,7 +618,7 @@
             <div class="portfolio-info">
               <h4>Kerem Apartmanı - Şişli</h4>
               <p></p>
-              <a href="assets/img/portfolio/KEREM APARTMANI.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/KEREM APARTMANI.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kerem Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -629,7 +629,7 @@
             <div class="portfolio-info">
               <h4>Alara Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/alaraapartmani.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/alaraapartmani.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Alara Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -640,7 +640,7 @@
             <div class="portfolio-info">
               <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
               <p></p>
-              <a href="assets/img/portfolio/güney inci.jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/güney inci.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Güney İnci Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
@@ -651,7 +651,7 @@
             <div class="portfolio-info">
               <h4>Güneş Apartmanı - Esenyurt</h4>
               <p></p>
-              <a href="assets/img/portfolio/günes.jpeg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/günes.jpeg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Güneş Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
