--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
           <p> </p>
         </div>
 
-        <div>
+        <div class="google">
           <iframe style="border:0; width: 100%; height: 270px;  "
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.498871932918!2d28.98811250000001!3d41.0608011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4a63510b4eee873!2sParga%20Site%20ve%20Tesis%20Y%C3%B6netimi!5e0!3m2!1str!2str!4v1672243090483!5m2!1str!2str"
             width="600" height="450" style="border:0;" allowfullscreen="true" loading="lazy"
